--- a/drupal/themes/custom/een/templates/block/block--system-branding-block.html.twig
+++ b/drupal/themes/custom/een/templates/block/block--system-branding-block.html.twig
@@ -15,12 +15,11 @@
 #}
 {% block content %}
     <div class="header-logo">
-        {% if site_name %}
-            <a id="logo" href="{{ path('<front>') }}" title="{{ 'Home'|t }}" rel="home">
-                <img src="/public/images/gov.uk_logotype_crown_invert_trans.png?0.17.3" width="35" height="31" alt="">
-                {{ site_name }}
+        {% if site_logo %}
+            <a href="{{ path('<front>') }}" title="{{ 'Home'|t }}" rel="home">
+              <img src="{{ site_logo }}" alt="{{ 'Home'|t }}" />
             </a>
         {% endif %}
     </div>
-    {{ site_slogan }}
+    <div class="header-slogan">{{ site_slogan }}</div>
 {% endblock %}
