EEN-88 Form styling

--- a/drupal/themes/custom/een/scss/een.scss
+++ b/drupal/themes/custom/een/scss/een.scss
@@ -171,6 +171,10 @@ a.back-link {
     .form-control {
         width:100%;
         border-color: #9B9B9B;
+        border-width: 1px;
+    }
+    #edit-email {
+        width:70%;
     }
 }
 
