EEN-87: Update mailto

--- a/drupal/modules/custom/opportunities/templates/opportunities-details.html.twig
+++ b/drupal/modules/custom/opportunities/templates/opportunities-details.html.twig
@@ -45,9 +45,7 @@
 
                 <a class="button-brand" href="#express_your_interest">Express your interest</a>
                 <hr/>
-                <a href="mailto:
-                ?subject={{ mail.subject }}
-                &body={{ mail.body|url_encode }}" target="_top">Share</a>
+                <a href="mailto:?subject={{ mail.subject }}&body={{ mail.body|url_encode }}" target="_top">Share</a>
             </div>
         </div>
         <div class="column-two-thirds contents-text-block">
