Fix Title in database + Update search behaviour

--- a/drupal/modules/custom/opportunities/templates/opportunities-search.html.twig
+++ b/drupal/modules/custom/opportunities/templates/opportunities-search.html.twig
@@ -37,7 +37,7 @@
                             {% endif %}
                             
                             {# organisation id #}
-                            {{ row._source.id }} |
+                            {{ row._id }} |
 
                             {# Country of origin #}
                             <span>{{ row._source.country_code }}</span>
