--- a/drupal/modules/custom/opportunities/templates/opportunities-details.html.twig
+++ b/drupal/modules/custom/opportunities/templates/opportunities-details.html.twig
@@ -13,7 +13,11 @@
                 <div class="meta-data">
                     <label>{{ 'Country of origin:'|t }}</label>
                     <p>
-                        <span class="flag-icon flag-icon-{{ opportunity._source.country_code|lower }}"></span>
+                        {% set flag = opportunity._source.country_code|lower %}
+                        {% if flag == 'uk' %}
+                            {% set flag = 'gb' %}
+                        {% endif %}
+                        <span class="flag-icon flag-icon-{{ flag }}"></span>
                         {{ opportunity._source.country }}
                     </p>
                 </div>
