EEN-88 allow buttons to wrap text

--- a/drupal/themes/custom/een/scss/een.scss
+++ b/drupal/themes/custom/een/scss/een.scss
@@ -30,6 +30,7 @@ hr {
     @include button($light-blue);  
     padding: 14px 14px;
     font-weight: bold;
+    white-space:inherit;
 }
 
 #global-header, 
