EEN-90 Link colours

--- a/drupal/themes/custom/een/scss/een.scss
+++ b/drupal/themes/custom/een/scss/een.scss
@@ -45,7 +45,16 @@ hr {
 }
 
 p { @extend .font-small }
-a { text-decoration: none;}
+a { 
+    text-decoration: none;
+    &:link {
+        color:$light-blue;  
+    }
+    &:visited {
+        color:$light-blue;
+    }
+}
+
 .form-label, .form-label-bold {
     color:inherit;
 }
