EEN-115: Adding event result and detail page

--- a/drupal/themes/custom/een/templates/pagination.html.twig
+++ b/drupal/themes/custom/een/templates/pagination.html.twig
@@ -1,16 +1,11 @@
+{% if params is empty %}
+    {% set params = {} %}
+{% endif %}
 <ul class="previous-next-navigation">
     <!-- Previous page link -->
     {% if page != 1 %}
         <li class="previous">
-            <a id="pagination-previous" href="{{ url(
-            route,
-            {
-                'search': search,
-                'opportunity_type': opportunity_type,
-                'page': page - 1,
-                'resultPerPage': resultPerPage
-            }
-            ) }}">
+            <a id="pagination-previous" href="{{ url(route, {'page': page - 1}|merge(params)) }}">
                 {{ 'Previous'|t }} <span class="visuallyhidden">{{ 'page'|t }}</span>
                 <span class="page-numbers">{{ page - 1 }} {{ 'of'|t }} {{ pageTotal }}</span>
             </a>
@@ -19,15 +14,7 @@
 
     {% if page != pageTotal %}
         <li class="next">
-            <a id="pagination-next" href="{{ url(
-            route,
-            {
-                'search': search,
-                'opportunity_type': opportunity_type,
-                'page': page + 1,
-                'resultPerPage': resultPerPage
-            }
-            ) }}">
+            <a id="pagination-next" href="{{ url(route, {'page': page + 1}|merge(params)) }}">
                 {{ 'Next'|t }} <span class="visuallyhidden">{{ 'page'|t }}</span>
                 <span class="page-numbers">{{ page + 1 }} {{ 'of'|t }} {{ pageTotal }}</span>
             </a>
