--- a/drupal/modules/custom/opportunities/templates/opportunities-search.html.twig
+++ b/drupal/modules/custom/opportunities/templates/opportunities-search.html.twig
@@ -52,7 +52,16 @@
                 {% endfor %}
 
                 {% include 'themes/custom/een/templates/pagination.html.twig'
-                with {'route': route, 'search': search, 'page': page, 'resultPerPage': resultPerPage, 'pageTotal': pageTotal, 'opportunity_type': opportunity_type} only %}
+                with {
+                    'route': route,
+                    'params': {
+                        'search': search,
+                        'opportunity_type': opportunity_type
+                    },
+                    'page': page,
+                    'resultPerPage': resultPerPage,
+                    'pageTotal': pageTotal
+                } only %}
 
             {% else %}
                 {{ 'No Results found for: '|t }}{{ search }}
