Work on Sticky Nav

--- a/drupal/modules/custom/opportunities/templates/opportunities-details.html.twig
+++ b/drupal/modules/custom/opportunities/templates/opportunities-details.html.twig
@@ -34,11 +34,12 @@
             </div>
         </div>
     </div>
-    <div class="grid-row">
-        <div class="column-one-third">
-            <div class="contents-list">
-                <h3 class="heading-medium">{{ 'Contents'|t }}</h3>
-                <ul>
+    <div class="grid-row grid-row-1">
+        <div class="column-one-third sticky-nav-container">            
+            
+            <div class="contents-list sticky-sidebar">
+                <h3 class="heading-medium sticky-sidebar-header">{{ 'Contents'|t }}</h3>
+                <ul class="sticky-sidebar-content">
                     <li><a href="#abstract">{{ 'Abstract'|t }}</a></li>
                     <li><a href="#description">{{ 'Description'|t }}</a></li>
                     <li><a href="#partner_expertise_sought">{{ 'Partner expertise sought'|t }}</a></li>
