--- a/drupal/modules/custom/events/templates/events-search.html.twig
+++ b/drupal/modules/custom/events/templates/events-search.html.twig
@@ -29,7 +29,11 @@
                             {{ row._source.start_date|date("d-m-Y") }} |
                         {% endif %}
                         {# Country of origin #}
-                        <span class="flag-icon flag-icon-{{ row._source.country_code|lower }}"></span>
+                        {% set flag = row._source.country_code|lower %}
+                        {% if flag == 'uk' %}
+                            {% set flag = 'gb' %}
+                        {% endif %}
+                        <span class="flag-icon flag-icon-{{ flag }}"></span>
                         {{ row._source.country }}
                     </p>
                     <p>
