--- a/drupal/modules/custom/opportunities/templates/opportunities-details.html.twig
+++ b/drupal/modules/custom/opportunities/templates/opportunities-details.html.twig
@@ -47,7 +47,7 @@
                     <li><a href="#ipr">{{ 'IPR'|t }}</a></li>
                 </ul>
 
-                <a class="button-brand" href="#express_your_interest">Express your interest</a>
+                <a class="button-brand" href="#express_your_interest">Apply for this project</a>
                 <hr/>
                 <a href="mailto:?subject={{ mail.subject }}&body={{ mail.body|url_encode }}" target="_top">Share</a>
             </div>
@@ -107,9 +107,23 @@
     <hr/>
     <div class="grid-row">
         <div class="column-one-third">
-            <h3 class="heading-medium single-header-one-col" id="express_your_interest">{{ 'Express your interest'|t }}</h3>
+            <h3 class="heading-medium single-header-one-col" id="express_your_interest">{{ 'Apply for this project'|t }}</h3>
         </div>
         <div class="column-two-thirds">
+            
+            <div class="progressor">
+                <h3>How it works</h3>
+                <div class="step-container">
+                    <ul class="progressbar">
+                        <li class="active step1"><span>Submit your application to EEN</span></li>
+                        <li class="step2"><span>Later, EEN advisors will present applications</span></li>
+                        <li class="step3"><span>Then, client selects winning application(s)</span></li>
+                    </ul>
+                </div>
+            </div>
+            
+            
+            
             <form action="{{ form['#action'] }}" method="POST" class="form-opportunities">
                 <div class="form-section">
                     {{ form.description }}
